--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,7 +8,7 @@ sonar.organization=ulboralabs
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 # This property is optional if sonar.modules is set. 
 sonar.sources=.
-sonar.exclusions=**/*_test.go,**/vendor/**,scripts/**/*,nbproject/**/*,managers/constants.go,server.go,managers/manager.go,/docs/**/*,handlers/handler.go,static/**/*
+sonar.exclusions=**/*_test.go,**/vendor/**,scripts/**/*,nbproject/**/*,managers/constants.go,server.go,tos.html,managers/manager.go,/docs/**/*,handlers/handler.go,static/**/*
 sonar.test.inclusions=**/*_test.go
 sonar.host.url=https://sonarcloud.io
 sonar.go.coverage.reportPaths=mysqldb/coverage.out, managers/coverage.out, handlers/coverage.out
