--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,7 +11,7 @@ sonar.sources=.
 sonar.exclusions=**/*_test.go,**/vendor/**,scripts/**/*,nbproject/**/*,managers/constants.go,server.go,tos.html,managers/manager.go,/docs/**/*,handlers/handler.go,static/**/*
 sonar.test.inclusions=**/*_test.go
 sonar.host.url=https://sonarcloud.io
-sonar.go.coverage.reportPaths=mysqldb/coverage.out, managers/coverage.out, handlers/coverage.out
+sonar.go.coverage.reportPaths=mysqldb/coverage.out, managers/coverage.out, handlers/coverage.out, prodsort/coverage.out
 
  
 # Encoding of the source code. Default is default system encoding
